turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:23: error: not found: value etCouleurBrosse
etCouleurBrosse(c:Color) getCouleurBrosse():Color
^LangtonsAnt:24: error: not found: value Interagir
Interagir avec le monde
^