turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c:Color){
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	
}

def step() {
if (getCouleurSol()==Color.black){
	setCouleurSol(Color.white);
	gauche();
	avance();
}
else if (getCouleurBrosse()==Color.white){
	setCouleurSol(Color.black);
	gauche();
	avance();


	
}
}
etCouleurBrosse(c:Color) getCouleurBrosse():Color
Interagir avec le monde
Obtenir la couleur du sol
getCouleurSol():Color